# jolteon

./: .clippy.toml  Cargo.toml  Containerfile  LINKS.md  README.md  TODO.md  get.nu  get.sh  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cd.yml  ci-container.yml  ci.yml  crates.io.yml  main.yml  nightly.yml  release.yml  release_draft.yml
assets/: actions.ini  actions.kv  help.txt  settings.toml  theme.toml
assets/themes/: gruvbox_dark.toml  gruvbox_dark_transparent.toml
docs/: BUGS.md  DEVELOPING.md  TODO.md
src/: README.md  app.rs  auto_update.rs  bye.rs  cli.rs  components.rs  config.rs  constants.rs  duration.rs  files.rs  main.rs  main_player.rs  mpris.rs  player.rs  settings.rs  source.rs  spawn_terminal.rs  state.rs  structs.rs  term.rs  theme.rs  toml.rs  ui.rs
src/actions/: action.rs
src/components/: children_components.rs  file_browser.rs  focus_group.rs  help.rs  library.rs  list.rs  playlists.rs  query.rs  queue.rs  rendering_error.rs  root.rs  song_list.rs  soundtracks.rs  tree.rs
src/components/children_components/: children_components.rs
src/components/file_browser/: current_directory.rs  file_browser.rs  file_browser_selection.rs  file_meta.rs  help.rs  keyboard_handler.rs  widget.rs
src/components/focus_group/: focus_group.rs
src/components/help/: help.rs
src/components/list/: component.rs  keyboard_handler.rs  widget.rs
src/components/playlists/: keyboard_handler.rs  playlists.rs  widget.rs
src/components/query/: actions.rs  component.rs  widget.rs
src/components/queue/: keyboard_handler.rs  queue.rs  queue_ui.rs  widget.rs
src/components/root/: actions.rs  root.rs  widget.rs
src/components/song_list/: component.rs  keyboard_handler.rs  widget.rs
src/components/soundtracks/: README.md  album_tree_item.rs  component.rs  keyboard_handler.rs  widget.rs
src/components/tree/: component.rs  keyboard_handler.rs  list_line.rs  tree_iterator.rs  tree_node.rs  tree_node_path.rs  widget.rs
src/cue/: Moroccan Roll.cue  Tim Buckley - Happy Sad.cue  cue_line.rs  cue_line_node.rs  cue_sheet.rs  cue_sheet_item.rs
src/files/: library.rs  playlists.rs
src/structs/: action.rs  direction.rs  jolt.rs  playlist.rs  queue.rs  song.rs
src/ui/: README.md  currently_playing.rs  help_tab.rs  keyboard_handler.rs  playlist.rs  top_bar.rs
