[package]
name = "jolteon"
description = "The best music player."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Taro"]
categories = ["multimedia::audio"]
keywords = ["music", "player", "terminal", "tui"]
repository = "https://github.com/lautarodragan/jolteon"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
strip = "debuginfo"
lto = true
codegen-units = 1

[dependencies]
crossterm = {  version = "0.29.0", features = ["event-stream", "serde"] }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-flac", "symphonia-isomp4", "symphonia-mp3", "symphonia-wav", "vorbis"]}
lofty = "0.22.3"
toml = "0.8.19"
serde = {version = "1.0.214", features = ["derive"]}
home = "0.5.9"
ratatui = { version = "0.29.0", features = ["serde", "unstable-widget-ref"] }
mpris-server = "0.8.1"
async-std = {version = "1.13.0", features = ["attributes", "unstable"]}
futures = "0.3.31"
flexi_logger = { version = "0.30.1" }
log = "0.4.22"
chrono = "0.4.38"
colored = "3.0.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
strum = { version = "0.27.1", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.15.1", features = [ "v4", "serde" ] }

[patch.crates-io]
cpal = { git = 'https://github.com/lautarodragan/cpal' }
