[package]
name = "jolteon"
description = "The best music player."
version = "1.2.0-beta"
edition = "2024"
rust-version = "1.86"
license-file = "LICENSE"
authors = ["Taro"]
categories = ["multimedia::audio"]
keywords = ["music", "player", "terminal", "tui"]
repository = "https://github.com/lautarodragan/jolteon"

[profile.dev]
panic = 'abort'
incremental = true

[profile.release]
panic = 'abort'
strip = "debuginfo"
lto = true
codegen-units = 1

[dependencies]
crossterm = {  version = "0.29.0", features = ["event-stream", "serde"] }
rodio = { version = "0.21.1", features = ["symphonia-aac", "symphonia-flac", "symphonia-isomp4", "symphonia-mp3", "symphonia-wav", "vorbis"]}
lofty = "0.22.4"
toml = "0.9.5"
serde = {version = "1.0.219", features = ["derive"]}
home = "0.5.11"
ratatui = { version = "0.29.0", features = ["serde", "unstable-widget-ref"] }
mpris-server = "0.9.0"
async-std = {version = "1.13.2", features = ["attributes", "unstable"]}
futures = "0.3.31"
flexi_logger = { version = "0.31.2" }
log = "0.4.27"
chrono = "0.4.41"
colored = "3.0.0"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = [ "v4", "serde" ] }
serde_default = "0.2.0"
serde-inline-default = "0.2.3"
clap = { version = "4.5.46", features = ["derive"] }

# TODO https://github.com/RustAudio/cpal/pull/909 (merged but not released)
[patch.crates-io]
cpal = { git = 'https://github.com/lautarodragan/cpal' }
